--- a/overseas/newbuyer/newbuyerzone_ru.html
+++ b/overseas/newbuyer/newbuyerzone_ru.html
@@ -268,7 +268,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <h1 class="wrap-text-h1">Оригинальные</h1>
                     <h2 class="wrap-text-h2">товары</h2>
                     <h3 class="wrap-text-h3"><span>Покупайте с уверенностью----Наслаждайтесь шопингом</span></h3>
-                    <p class="wrap-text-p">JD.com это больше чем интернет магазин. Мы онлайн магазин, ориентированный на продвижение оригинального,высококачественного продукта по низким ценам. В JD.com мы готовы предложить вам следующее:</p>
+                    <p class="wrap-text-p">JD это больше чем интернет магазин. Мы онлайн магазин, ориентированный на продвижение оригинального,высококачественного продукта по низким ценам. В JD.com мы готовы предложить вам следующее:</p>
                 </div>
             </div>
             <!-- E flr1 summary -->
@@ -277,7 +277,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <div class="wrap-text-ct">
                         <h2 class="wrap-text-h2">Оригинальные товары</h2>
-                        <p class="wrap-text-p">Мы гарантируем, что товары представленные на JD.com оригинальные с отобранным качеством.</p>
+                        <p class="wrap-text-p">Мы гарантируем, что товары представленные на JD оригинальные с отобранным качеством.</p>
                     </div>
                     <div class="wrap-flr-detail-bg"></div>
                 </div>
@@ -375,7 +375,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <h1 class="wrap-text-h1">Защита покупателя</h1>
                 <div class="wrap-flr3-section wrap-flr3-section-1">
                     <h2 class="wrap-text-h2">Покупайте с уверенностью</h2>
-                    <p class="wrap-text-p">С JD.com вы защищены от бракованных товаров и ошибок при доставке. </p>
+                    <p class="wrap-text-p">С JD вы защищены от бракованных товаров и ошибок при доставке. </p>
                     <p class="wrap-text-p">В случае возникновения ошибок, мы гарантируем возврат полной стоимости товара, если:</p>
                     <div class="wrap-flr3-two-cols cf">
                         <div class="wrap-flr3-left">
@@ -430,7 +430,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <h2 class="wrap-text-h2">Безопасность оплаты (part of the “buyer protection” page)</h2>
                     <p class="wrap-text-p">В настоящий момент мы принимаем оплату только через систему PayPal. Мы работаем над тем, чтобы увеличить методы </p>
                     <p class="wrap-text-p">оплаты в будущем. Пожалуйста следите за обновлениями нашего сайта. Просим извинения за предоставленные неудобства. </p>
-                    <p class="wrap-text-p">Ваша данные об оплате защищены криптографической системой SSL и отправляются напрямую в JD.com (не к поставщикам)</p>
+                    <p class="wrap-text-p">Ваша данные об оплате защищены криптографической системой SSL и отправляются напрямую в JD (не к поставщикам)</p>
                 </div>
             </div>
         </div>
