--- a/overseas/newbuyer/newbuyerzone.html
+++ b/overseas/newbuyer/newbuyerzone.html
@@ -442,7 +442,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         <div class="wrap-1200">
             <div class="wrap-ad">
                 <a href="http://en.jd.com/brands/" class="href-ad" target="_blank"><img src="http://st.en.jd.com/ru/newbuyerzone/sprite/new_ad_1.jpg" alt=""/></a>
-                <a href="" class="href-ad" target="_blank"><img src="http://st.en.jd.com/ru/newbuyerzone/sprite/new_ad_2.jpg" alt=""/></a>
+                <a href="http://en.jd.com/superdeals/detail.html" class="href-ad" target="_blank"><img src="http://st.en.jd.com/ru/newbuyerzone/sprite/new_ad_2.jpg" alt=""/></a>
             </div>
         </div>
     </div>
