--- a/overseas/newbuyer/newbuyerzone_ru.html
+++ b/overseas/newbuyer/newbuyerzone_ru.html
@@ -268,7 +268,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <h1 class="wrap-text-h1">Оригинальные</h1>
                     <h2 class="wrap-text-h2">товары</h2>
                     <h3 class="wrap-text-h3"><span>Покупайте с уверенностью----Наслаждайтесь шопингом</span></h3>
-                    <p class="wrap-text-p">JD это больше чем интернет магазин. Мы онлайн магазин, ориентированный на продвижение оригинального,высококачественного продукта по низким ценам. В JD.com мы готовы предложить вам следующее:</p>
+                    <p class="wrap-text-p">JD это больше чем интернет магазин. Мы онлайн магазин, ориентированный на продвижение оригинального,высококачественного продукта по низким ценам. В JD мы готовы предложить вам следующее:</p>
                 </div>
             </div>
             <!-- E flr1 summary -->
