--- a/overseas/newbuyer/newbuyerzone_ru.html
+++ b/overseas/newbuyer/newbuyerzone_ru.html
@@ -427,10 +427,10 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     </div>
                 </div>
                 <div class="wrap-flr3-section wrap-flr3-section-3">
-                    <h2 class="wrap-text-h2">Безопасность оплаты (part of the “buyer protection” page)</h2>
+                    <h2 class="wrap-text-h2">Безопасность оплаты</h2>
                     <p class="wrap-text-p">В настоящий момент мы принимаем оплату только через систему PayPal. Мы работаем над тем, чтобы увеличить методы </p>
                     <p class="wrap-text-p">оплаты в будущем. Пожалуйста следите за обновлениями нашего сайта. Просим извинения за предоставленные неудобства. </p>
-                    <p class="wrap-text-p">Ваша данные об оплате защищены криптографической системой SSL и отправляются напрямую в JD (не к поставщикам)</p>
+                    <p class="wrap-text-p">Ваша данные об оплате защищены криптографической системой SSL и отправляются напрямую в JD.com (не к поставщикам)</p>
                 </div>
             </div>
         </div>
