--- a/overseas/newbuyer/newbuyerzone_ru.html
+++ b/overseas/newbuyer/newbuyerzone_ru.html
@@ -246,7 +246,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         <div class="wrap-hd-extra wrap-1200">
             <div class="map">
                 <a href="#flr1" class="item-1"><span class="map-a-text">О JD Global<i class="map-icon"></i></span></a>
-                <a href="#flr2" class="item-2"><span class="map-a-text">Руководство для новых пользователей<i class="map-icon"></i></span></a>
+                <a href="#flr2" class="item-2"><span class="map-a-text">Руководство для новичков<i class="map-icon"></i></span></a>
                 <a href="#flr3" class="item-3"><span class="map-a-text">Защита покупателя<i class="map-icon"></i></span></a>
             </div>
         </div>
@@ -321,13 +321,13 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <!-- E flr1 ct4 -->
         </div>
         <!-- E about jd global -->
-        <!-- S Руководство для новых пользователей -->
+        <!-- S Руководство для новичков -->
         <div class="wrap-flr flr2">
             <a href="javascript:void(0)" class="href-map" id="flr2"></a>
             <!-- S flr2 summary -->
             <div class="wrap-flr-summary">
                 <div class="wrap-hd-ct wrap-1200">
-                    <h1 class="wrap-text-h1">Руководство для новых пользователей</h1>
+                    <h1 class="wrap-text-h1">Руководство для новичков</h1>
                     <p class="wrap-text-p">Добро пожаловать в JD Global, познакомьтесь с кратким руководством для покупок онлайн.</p>
                 </div>
             </div>
@@ -343,7 +343,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <!-- S wrap-flr-detail-ct-2 -->
                 <div class="wrap-flr-detail-ct wrap-detail-ct-2">
                     <h2 class="wrap-text-h2"><i class="icon-no">2</i><span class="wrap-text-h2-span">Выбирайте товары</span></h2>
-                    <p class="wrap-text-p">Выбирая товар среди широкого разнообразия оригинальных китайских брэндов, кладите понравившийся товар в корзину.</p>
+                    <p class="wrap-text-p">Выбирая товар среди широкого разнообразия оригинальных китайских брендов, кладите понравившийся товар в корзину.</p>
                 </div>
                 <!-- E wrap-flr-detail-ct-2 -->
                 <!-- S wrap-flr-detail-ct-3 -->
@@ -367,7 +367,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             </div>
             <!-- E flr2 detail -->
         </div>
-        <!-- E Руководство для новых пользователей -->
+        <!-- E Руководство для новичков -->
         <!-- S Защита покупателя -->
         <div class="wrap-flr flr3">
             <a href="javascript:void(0)" class="href-map" id="flr3"></a>
@@ -408,7 +408,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                             </ul>
                         </div>
                         <div class="wrap-flr3-left">
-                            <h3 class="wrap-text-h3">От поставщиков JD Молл  JD Молл</h3>
+                            <h3 class="wrap-text-h3">От поставщиков JD Молл</h3>
                             <ul class="wrap-text-ul">
                                 <li>
                                     <i class="icon-no">1</i><span class="wrap-flr3-text">Свяжитесь с продавцом: если ваш товар не был </span>
@@ -458,7 +458,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         </div>
         <div class="map">
             <a href="#flr1" class="item-1"><span class="map-a-text">О JD Global<i class="map-icon"></i></span></a>
-            <a href="#flr2" class="item-2"><span class="map-a-text">Руководство для новых пользователей<i class="map-icon"></i></span></a>
+            <a href="#flr2" class="item-2"><span class="map-a-text">Руководство для новичков<i class="map-icon"></i></span></a>
             <a href="#flr3" class="item-3"><span class="map-a-text">Защита покупателя<i class="map-icon"></i></span></a>
             <a href="http://en.jd.com/ru/index-ru.html" class="item-4" target="_blank">Начинаем покупать&nbsp;&gt;</a>
 
