--- a/overseas/newbuyer/newbuyerzone_ru.html
+++ b/overseas/newbuyer/newbuyerzone_ru.html
@@ -350,7 +350,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-flr-detail-ct wrap-detail-ct-3">
                     <h2 class="wrap-text-h2"><i class="icon-no">3</i><span class="wrap-text-h2-span">Оформляйте заказ</span></h2>
                     <ul class="wrap-text-ul">
-                        <li>Зайдя на страницу покупной корзины, пожалуйста заполните информацию о доставке и оплате. Ваша информацию будет защищена системой безопасности SSL, поэтому вы можете оплачивать с уверенностью.</li>
+                        <li>Зайдя на страницу покупной корзины, пожалуйста заполните информацию по доставке и оплате. Ваша информация будет защищена системой безопасности SSL, поэтому вы можете оплачивать с уверенностью.</li>
                         <li>Также вы можете сохранить ваш адрес отправки,чтобы при следующих покупках вы быстро и без проблем оформили заказ. </li>
                     </ul>
                 </div>
