sexcity file path

--- a/overseas/sexCityEn/promo.html
+++ b/overseas/sexCityEn/promo.html
@@ -13,7 +13,7 @@
     <link media="all" href="http://st.en.jd.com/newapp/ept/static/ui/website/css/content.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://st.en.jd.com/newapp/ept/static/ui/website/css/index1.css" media="all"/>
     <!--<link rel="stylesheet" type="text/css" href="http://st.en.jd.com/ru/newbuyerzone/index.css" media="all"/>-->
-    <link rel="stylesheet" type="text/css" href="http://st.en.jd.com/ru/sexcity/promo_a/en/css/index.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css" media="all"/>
     <script src="http://st.en.jd.com/newapp/jdf/lib/jquery-1.7.2.js"></script>
     <script type="text/javascript" src="http://st.en.jd.com/newapp/jdf/1.0.0/unit/base/1.0.0/base.js"></script>
     <script type="text/javascript" src="http://st.en.jd.com/newapp/jdf/1.0.0??ui/ui/1.0.0/ui.js,unit/event/1.0.0/event.js"></script>
@@ -282,7 +282,6 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <h6 class="subtitle">HOT BEACH COLLECTION</h6>
                     <p class="tips">CAPTURE THE MOMENT! ENJOY SUMMER’S END WITH YOUR BEST FRIENDS</p>
                     <p class="intro">For women who enjoy bright colors and good feeling fabrics it is easy to find your natural summer look.Try a bikini with a summer cover up for a relaxed, modern style.</p>
-                    <!--@开发： 领券后给see-detail添加has-coupon，btn-coupon添加shop-now -->
                     <a href="javascript:void(0);" target="_blank" class="see-details"></a>
                     <a href="http://en.jd.com/coupon/new.html" target="_blank" class="btn-coupon"></a>
                     <div class="alert-area">
@@ -312,9 +311,9 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <!-- S floating-right-->
             <div class="png-bg sale-right-a" id="floating-right">
                 <a href="http://en.jd.com/coupon/new.html" class="btn-1" target="_blank"></a>
-                <a href="https://www.facebook.com/pages/JDcom-Global/861644700572405?fref=ts" class="btn-2"></a>
-                <a href="http://ok.ru/group/52653393641653" class="btn-3"></a>
-                <a href="http://vk.com/jd" class="btn-4"></a>
+                <a href="https://www.facebook.com/pages/JDcom-Global/861644700572405?fref=ts" class="btn-2" target="_blank"></a>
+                <a href="http://ok.ru/group/52653393641653" class="btn-3" target="_blank"></a>
+                <a href="http://vk.com/jd" class="btn-4" target="_blank"></a>
                 <a class="go-top" href="#nolink"></a>
             </div>
             <!-- E floating-right-->
@@ -327,7 +326,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor1 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/en/img/sexy-and-the-city-floor-1.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-floor-1.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -435,7 +434,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor2 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/en/img/sexy-and-the-city-floor-2.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-floor-2.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -544,7 +543,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor3 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/en/img/sexy-and-the-city-floor-3.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-floor-3.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -652,7 +651,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor4 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/en/img/sexy-and-the-city-floor-4.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-floor-4.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -858,7 +857,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         <% var sdata = sections[i] %>
         <li>
             <div class="goods-img">
-                <a href="<%= sdata.link %>" target="_blank" class="href-goods-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/en/img/<%= sdata.img %>" alt="<%= sdata.name %>"/></a>
+                <a href="<%= sdata.link %>" target="_blank" class="href-goods-img"><img src="img/<%= sdata.img %>" alt="<%= sdata.name %>"/></a>
             </div>
             <div class="goods-info">
                 <a href="<%= sdata.link %>" target="_blank" class="href-goods-name"><%= sdata.name %></a>
