--- a/overseas/sexCityRu/promo.html
+++ b/overseas/sexCityRu/promo.html
@@ -13,7 +13,7 @@
     <link media="all" href="http://st.en.jd.com/newapp/ept/static/ui/website/css/content.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://st.en.jd.com/newapp/ept/static/ui/website/css/index1.css" media="all"/>
     <!--<link rel="stylesheet" type="text/css" href="http://st.en.jd.com/ru/newbuyerzone/index.css" media="all"/>-->
-    <link rel="stylesheet" type="text/css" href="http://st.en.jd.com/ru/sexcity/promo_a/ru/css/index.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css" media="all"/>
     <script src="http://st.en.jd.com/newapp/jdf/lib/jquery-1.7.2.js"></script>
     <script type="text/javascript" src="http://st.en.jd.com/newapp/jdf/1.0.0/unit/base/1.0.0/base.js"></script>
     <script type="text/javascript" src="http://st.en.jd.com/newapp/jdf/1.0.0??ui/ui/1.0.0/ui.js,unit/event/1.0.0/event.js"></script>
@@ -287,18 +287,19 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <p class="intro">
                         <span>Любишь яркие цвета, легкие ткани и необычный дизайн? С нами ты легко найдешь то, что тебе нужно. Сексуальный купальник подчеркнет твою женственность, а яркие аксессуары завершат твой бесподобный пляжный образ!</span>
                     </p>
-                    <!--@开发： 领券后给see-detail添加has-coupon，btn-coupon添加shop-now -->
                     <a href="javascript:void(0);" target="_blank" class="see-details"></a>
                     <a href="http://en.jd.com/coupon/new.html" target="_blank" class="btn-coupon"></a>
                     <div class="alert-area">
                         <div class="mod-486">
-                            <h6>Правила:</h6>
-                            <p>1 )  Скидка $10 при заказе $50 и больше (не включая доставку)</p>
-                            <p>2 )  Один купон на один заказ.</p>
-                            <p>3 )  На все категории товаров и брендов, не включая продукцию Коллекции JD.</p>
-                            <p>4 )  Дата окончания: 31 Августа, 2015.</p>
-                            <p>5 )  На наличность не обменивается. Стоимость купонной скидки не возмещается при возврате и обмене товара.</p>
-                            <p>6 ) JD оставляет за собой право изменить/остановить эту акцию в любое время без предупреждения.</p> <a href="#" target="_blank" class="btn-close hot-btn"></a>
+                            <h6>RULES:</h6>
+                            <p>1 )  $10 Off Orders $50 or more (Shipping Cost Not Included)</p>
+                            <p>2 )  One coupon per order.</p>
+                            <p>3 )  For all categories, stores and locations, excluding JD Collection
+                                PRODUCTS.</p>
+                            <p>4 )  Expiration Date: August 31, 2015.</p>
+                            <p>5 )  Not redeemable for cash. The value of the coupon discount will not be
+                                refunded on returns or exchanges.</p>
+                            <p>6 ) JD reserves the right to modify or discontinue this offer at any time without notice. </p> <a href="#" target="_blank" class="btn-close hot-btn"></a>
                         </div>
                     </div>
                     <div class="mod-join">
@@ -315,9 +316,9 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <!-- S floating-right-->
             <div class="png-bg sale-right-a" id="floating-right">
                 <a href="http://en.jd.com/ru/coupon/new.html" class="btn-1" target="_blank"></a>
-                <a href="https://www.facebook.com/JDRussia?fref=nf" class="btn-2"></a>
-                <a href="http://ok.ru/group/52653393641653" class="btn-3"></a>
-                <a href="http://vk.com/jd" class="btn-4"></a>
+                <a href="https://www.facebook.com/JDRussia?fref=nf" class="btn-2" target="_blank"></a>
+                <a href="http://ok.ru/group/52653393641653" class="btn-3" target="_blank"></a>
+                <a href="http://vk.com/jd" class="btn-4" target="_blank"></a>
                 <a class="go-top" href="#nolink"></a>
             </div>
             <!-- E floating-right-->
@@ -330,7 +331,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor1 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/ru/img/sexy-and-the-city-ru-floor-1.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-ru-floor-1.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -438,7 +439,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor2 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/ru/img/sexy-and-the-city-ru-floor-2.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-ru-floor-2.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -547,7 +548,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor3 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/ru/img/sexy-and-the-city-ru-floor-3.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-ru-floor-3.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -655,7 +656,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                 <div class="wrap-1200">
                     <!--S floor4 搭配部分-->
                     <div class="mod-mix">
-                        <div class="bg-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/ru/img/sexy-and-the-city-ru-floor-4.jpg" alt=""/></div>
+                        <div class="bg-img"><img src="img/sexy-and-the-city-ru-floor-4.jpg" alt=""/></div>
                         <div class="deco-top"></div>
                         <div class="deco-left"></div>
                         <div class="deco-right"></div>
@@ -861,7 +862,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         <% var sdata = sections[i] %>
         <li>
             <div class="goods-img">
-                <a href="<%= sdata.link %>" target="_blank" class="href-goods-img"><img src="http://st.en.jd.com/ru/sexcity/promo_a/ru/img/<%= sdata.img %>" alt="<%= sdata.nameRussian %>"/></a>
+                <a href="<%= sdata.link %>" target="_blank" class="href-goods-img"><img src="img/<%= sdata.img %>" alt="<%= sdata.nameRussian %>"/></a>
             </div>
             <div class="goods-info">
                 <a href="<%= sdata.link %>" target="_blank" class="href-goods-name"><%= sdata.nameRussian %></a>
