--- a/overseas/sexCityRu/promo.html
+++ b/overseas/sexCityRu/promo.html
@@ -291,15 +291,13 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <a href="http://en.jd.com/coupon/new.html" target="_blank" class="btn-coupon"></a>
                     <div class="alert-area">
                         <div class="mod-486">
-                            <h6>RULES:</h6>
-                            <p>1 )  $10 Off Orders $50 or more (Shipping Cost Not Included)</p>
-                            <p>2 )  One coupon per order.</p>
-                            <p>3 )  For all categories, stores and locations, excluding JD Collection
-                                PRODUCTS.</p>
-                            <p>4 )  Expiration Date: August 31, 2015.</p>
-                            <p>5 )  Not redeemable for cash. The value of the coupon discount will not be
-                                refunded on returns or exchanges.</p>
-                            <p>6 ) JD reserves the right to modify or discontinue this offer at any time without notice. </p> <a href="#" target="_blank" class="btn-close hot-btn"></a>
+                            <h6>Правила:</h6>
+                            <p>1 )  Скидка $10 при заказе $50 и больше (не включая доставку)</p>
+                            <p>2 )  Один купон на один заказ.</p>
+                            <p>3 )  На все категории товаров и брендов, не включая продукцию Коллекции JD.</p>
+                            <p>4 )  Дата окончания: 31 Августа, 2015.</p>
+                            <p>5 )  На наличность не обменивается. Стоимость купонной скидки не возмещается при возврате и обмене товара.</p>
+                            <p>6 ) JD оставляет за собой право изменить/остановить эту акцию в любое время без предупреждения.</p> <a href="#" target="_blank" class="btn-close hot-btn"></a>
                         </div>
                     </div>
                     <div class="mod-join">
@@ -314,7 +312,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             </div>
             <!-- E header -->
             <!-- S floating-right-->
-            <div class="png-bg sale-right-a" id="floating-right">
+            <div class="png-bg sale-right-a has-coupon" id="floating-right">
                 <a href="http://en.jd.com/ru/coupon/new.html" class="btn-1" target="_blank"></a>
                 <a href="https://www.facebook.com/JDRussia?fref=nf" class="btn-2" target="_blank"></a>
                 <a href="http://ok.ru/group/52653393641653" class="btn-3" target="_blank"></a>
