--- a/overseas/sexCityEn/promo.html
+++ b/overseas/sexCityEn/promo.html
@@ -283,7 +283,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     <p class="tips">CAPTURE THE MOMENT! ENJOY SUMMER’S END WITH YOUR BEST FRIENDS</p>
                     <p class="intro">For women who enjoy bright colors and good feeling fabrics it is easy to find your natural summer look.Try a bikini with a summer cover up for a relaxed, modern style.</p>
                     <a href="javascript:void(0);" target="_blank" class="see-details"></a>
-                    <a href="http://en.jd.com/coupon/new.html" target="_blank" class="btn-coupon"></a>
+                    <a href="#nolink" class="btn-coupon"></a>
                     <div class="alert-area">
                         <div class="mod-486">
                             <h6>RULES:</h6>
@@ -1267,10 +1267,19 @@ var goodsData =[
     });
     /*领券规则*/
     $(function(){
+        $(".btn-coupon").click(function(e){
+            $(this).addClass('shop-now').siblings('.see-details').addClass('has-coupon');
+            if($(this).attr('href') == '#nolink'){
+                $(this).attr('href','http://en.jd.com/coupon/new.html');
+                $(this).attr('target','_blank');
+                e.stopPropagation();
+                return false;
+            }
+        })
         $('.alert-area .btn-close').click(function(){$('.alert-area').hide();return false;});//关闭浮层
         $('.see-details').click(function(){
             $('.alert-area').show();
-            $(this).addClass('has-coupon').siblings('.btn-coupon').addClass('shop-now');
+            //$(this).addClass('has-coupon').siblings('.btn-coupon').addClass('shop-now');
             return false;
         });
         $('.alert-area').click(function(){
